ENH: qSlicerEMSegmentModule creates qSlicerScriptedLoadableModuleWidget
* Remove EMSegmentPy.py and add qSlicerEMSegmentModuleWidget.py

* qSlicerEMSegmentModuleWidget.py is loaded using qSlicerScriptedLoadableModuleWidget

* onMRMLSceneChanged method has been added to qSlicerEMSegmentModuleWidget
to ensure proper initialization.

--- a/Modules/EMSegment/Qt/Py/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 SET(EMS_PYTHON_SCRIPTS
-  EMSegmentPy.py
+  qSlicerEMSegmentModuleWidget.py
   EMSegmentQuickPy.py
   EMSegmentWizard/__init__.py
   EMSegmentWizard/Helper.py
