ENH: EMSegment4: Introduced the new module EMSegment Quick.
 * which will provide a very simple EMSegment mode
 * fixed plotting in EMSegment advanced



git-svn-id: http://svn.slicer.org/Slicer3/trunk@16837 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
@@ -14,6 +14,9 @@ SET(EMSegmentWizard_PYTHON_SCRIPTS
   EMSegmentDefineMiscParametersStep.py              # step 9
   EMSegmentStartSegmentationStep.py
   EMSegmentDummyStep.py  
+  
+  # quick mode
+  EMSegmentQuickStep1.py
   )
 
 SET(EMSegmentWizard_PYTHON_RESOURCES
