--- a/Modules/EMSegment/Qt/Py/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/CMakeLists.txt
@@ -2,6 +2,7 @@ ADD_SUBDIRECTORY(EMSegmentWizard)
 
 SET(EMS_PYTHON_SCRIPTS
     EMSegmentPy.py
+    EMSegmentQuickPy.py
   )
   
 SET(EMS_PYTHON_RESOURCES
@@ -10,6 +11,14 @@ SET(EMS_PYTHON_RESOURCES
   
 ctkMacroCompilePythonScript(
   TARGET_NAME EMSegmentPy
+  SCRIPTS "${EMS_PYTHON_SCRIPTS}"
+  RESOURCES "${EMS_PYTHON_RESOURCES}"
+  DESTINATION_DIR ${Slicer_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
+  INSTALL_DIR ${Slicer_INSTALL_ROOT}
+  )
+
+ctkMacroCompilePythonScript(
+  TARGET_NAME EMSegmentQuickPy
   SCRIPTS "${EMS_PYTHON_SCRIPTS}"
   RESOURCES "${EMS_PYTHON_RESOURCES}"
   DESTINATION_DIR ${Slicer_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
