ENH: EMSegment4: First real version of the EMSegment Quick module.
 * provides a version of the EMSegmenter for quick use without atlas requirements
 * not fully functional yet



git-svn-id: http://svn.slicer.org/Slicer3/trunk@16838 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
@@ -17,6 +17,10 @@ SET(EMSegmentWizard_PYTHON_SCRIPTS
   
   # quick mode
   EMSegmentQuickStep1.py
+  EMSegmentQuickStep2.py
+  EMSegmentQuickStep3.py
+  EMSegmentQuickStep4.py
+  EMSegmentQuickSegmentationStep.py
   )
 
 SET(EMSegmentWizard_PYTHON_RESOURCES
