BUG: EMSegment4: Use the new variable name for commandline module's bin dir.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16841 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -207,7 +207,7 @@ if(NOT DISABLE_CXX_TESTING)
     set(Slicer3_BINARY_DIR ${Slicer_BINARY_DIR})
     set(Slicer3_EXE ${Slicer_BINARY_DIR}/Slicer --launcher-no-splash)
     set(WRAPPED_TEST_EXE_PREFIX --launch ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
-    set(WRAPPED_EXE_PREFIX --launch ${Slicer_BINARY_DIR}/${Slicer_PLUGINS_BIN_DIR})
+    set(WRAPPED_EXE_PREFIX --launch ${Slicer_BINARY_DIR}/${Slicer_CLIMODULES_BIN_DIR})
     if(WIN32)
       set(WRAPPED_EXE_PREFIX ${WRAPPED_EXE_PREFIX}/${CMAKE_BUILD_TYPE})
       set(WRAPPED_TEST_EXE_PREFIX ${WRAPPED_TEST_EXE_PREFIX}/${CMAKE_BUILD_TYPE})
