ENH: EMSegment4: Show Statistics, add Reset button, bugfixes..
 * rename EMSegment Quick to EMSegment Easy
 * add label statistics output after segmentation in simple, advanced and easy mode
 * add a reset button to simple and easy mode to enable new segmentation after a performed one
 * fixed bug where Task, Tcl and TestData were not installed correctly when packaging using CMake/CPack
 * add brief introduction to step 1 of EMSegment and EMSegment Easy
 * enable the MRML save and load in EMSegment Easy
 * add color table selector to EMSegment Easy
 * all tests pass in Slicer3 and Slicer4 on Mac and Linux
 


git-svn-id: http://svn.slicer.org/Slicer3/trunk@16842 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
@@ -13,13 +13,15 @@ SET(EMSegmentWizard_PYTHON_SCRIPTS
   EMSegmentEditNodeBasedParametersStep.py           # step 8
   EMSegmentDefineMiscParametersStep.py              # step 9
   EMSegmentStartSegmentationStep.py
+  EMSegmentLabelStatisticsStep.py                   # step after segmentation, step 11  
   EMSegmentDummyStep.py  
   
-  # quick mode
+  # easy/quick mode
   EMSegmentQuickStep1.py
   EMSegmentQuickStep2.py
   EMSegmentQuickStep3.py
   EMSegmentQuickStep4.py
+  EMSegmentQuickStep5.py
   EMSegmentQuickSegmentationStep.py
   )
 
