--- a/Modules/EMSegment/Qt/Logic/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Logic/CMakeLists.txt
@@ -24,6 +24,8 @@ SET(module_logic_SRCS
 SET(module_logic_target_libraries
   #EMSegmentMRML
   #EMSegmentRegistration
+  qSlicerBaseQTCorePythonQt
+  qSlicerBaseQTGUIPythonQt
   vtkSlicerVolumesModuleLogic
   )
 
